samples/_failures_safe/1761042042_c8c94f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2f4bf8be.c: In function ‘main’:
./samples/SAFE/__tmp_2f4bf8be.c:196:12: error: expected identifier or ‘(’ at end of input
  196 |     struct v
      |            ^
./samples/SAFE/__tmp_2f4bf8be.c:196:12: error: expected declaration or statement at end of input
